	 libspectrum_tape_block_length (Marek).
20081027 doc/libspectrum.txt: bring up to date.
20081027 README: haven't been using CVS for a while now.
20081108 doc/libspectrum.txt,libspectrum.c,libspectrum.h.in: allow for
	 identification of more disk images (part of patch #2233744)
	 (Gergely Szasz).
20081109 doc/cvs-tags: document 0.5.0 branch tag.
20081110 doc/libspectrum.txt: minor documentation updates
         (libspectrum_0_5_0-branch).
20081117 configure.in: bump version number for 0.5.0-pre1 release
	 (libspectrum_0_5_0-branch).
20081118 test/Makefile.am: distribute empty.z80 and writeprotected.mdr test
         data files (Fred).
20081118 configure.in: set glib status off if we can't find it (thanks, Chris
         Young) (Fred).
20081129 timings.c: correct first contended tstate for TS2068 based on updated
         fusetest from Phil (Fred).
20081129 configure.in,doc/libspectrum.{3,txt},hacking/ChangeLog,Makefile.am,
	 README: final tweaks for 0.5.0 release (libspectrum_0_5_0-branch).
20081130 ChangeLog: add reference to TS2068 timing update
         (libspectrum_0_5_0-branch) (Fred).
20081203 ChangeLog,Makefile.am,README,doc/libspectrum.{3,txt},hacking/ChangeLog,
	 configure.in: merge libspectrum_0_5_0-branch changes onto trunk.
20081214 libspectrum.c: loosen signature checks for .dsk files (Gergely;
	 thanks, zx81 and Simon Owen).
20090128 configure.in: add --without-(bzip2 /zlib) for gentoo and similar
         distros (patch #2533274) (José Manuel Ferrer Ortiz).
20090411 doc/libspectrum.txt,tape.c: add a new tape flag for end of tape
         (part of fixes for bug #2743838) (Fred).
20090411 libspectrum.h.in: export new end of tape flag.
20090509 tape_block.c: handle querying the block length for turbo and pure data
         blocks with 0 length (Fred).
20090608 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for the Fuller Box in snapshots
         (Fred).