@@ -628,6 +628,7 @@ The available properties (along with their types) are:
 * libspectrum_byte* divide_ram[4]
 
 * int fuller_box_active
+* int melodik_active
 
 Most of those should be fairly self-explanatory; those which may not
 be are:
