@@ -146,3 +146,5 @@ libspectrum_byte* divide_eprom 1
 libspectrum_byte* divide_ram 1
 
 int fuller_box_active
+
+int melodik_active
