@@ -724,3 +724,6 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20090608 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
          snapshot.c,szx.c,z80.c: add support for the Fuller Box in snapshots
          (Fred).
+20090610 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
+         snapshot.c,szx.c,z80.c: add support for the Melodik and similar AY
+         interfaces (feature request #1841501) (Fred).
